# langgraph-agent-auditor

./: .gitignore  IMPLEMENTATION.md  README.md  main.py  pyproject.toml  test_output.txt
audit/report_on_peer_generated/: final_audit_report_20260224_165332.md  final_audit_report_20260224_171153.md  final_audit_report_20260224_182923.md  final_audit_report_20260227_172400.md  latest_report.md
audit/report_on_self_generated/: final_audit_report_20260224_170530.md  final_audit_report_20260224_170640.md  final_audit_report_20260224_170932.md  final_audit_report_20260224_182909.md  final_audit_report_20260225_153136.md  final_audit_report_20260225_155725.md  final_audit_report_20260225_163459.md  final_audit_report_20260225_165625.md  final_audit_report_20260226_122901.md  final_audit_report_20260226_192645.md  final_audit_report_20260227_190236.md  final_audit_report_20260227_193841.md  final_audit_report_20260227_195934.md  latest_report.md
report/: AUDIT_SUBMISSION_REPORT.md
rubric/: rubric.json
src/: graph.py  state.py
src/nodes/: detective.py  detectives.py  judges.py  justice.py
src/tools/: ast_parser.py  docling_utils.py  file_utils.py  git_tools.py  vision_utils.py
tests/: test_docanalyst.py  test_judges.py  test_repoinvestigator.py  test_visioninspector.py
utils/: config_loader.py
